--- a/src/view/view-new.html
+++ b/src/view/view-new.html
@@ -7,14 +7,15 @@
   <div class="content">
     { itemdata.content }
   </div>
-  <script>
-  var store = require('../store')
-  var self = this
-  self.itemdata = null
+  <script type="es6">
+  import stores from '../stores'
 
-  store.fetchNew(opts.data, function (item) {
-    self.itemdata = item
-    self.update()
-  })
+  this.itemdata = null
+
+  this.loadData = () => {
+    this.itemdata = stores.newstore.getNewById(opts.data)
+    this.update()
+  }
+  this.loadData()
   </script>
 </view-new>
