--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,4 @@
-* { margin: 0;padding: 0;}
+@import "sass/typo.scss";
 
 .header {
   position: fixed;
@@ -10,8 +10,12 @@
   color: #fff;
   text-align: center;
   font-size: 20px;
+  h1 {
+    font-size: 20px;
+    line-height: 40px;
+    color: #fff;
+  }
 }
-.header h1 { font-size: 20px;line-height: 40px;}
 #wrap {
   padding: 50px 15px 0;
 }
@@ -19,4 +23,10 @@
   width: 100%;
   height: 100px;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  button {
+    margin-right: 5px;
+  }
 }
